2007-02-21 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 389: rewite the expression defining the stride; cosmetic changes
	           to the latest changelog entries
	
2007-02-20 David Moore http://davemoore.org/
	* SVN 388: Improvements to error handling in channel/bandwidth
	           allocation.
	* SVN 387: Bug fixes for trigger source get/set

2007-02-19 David Moore http://davemoore.org/
	* SVN 386: Changed DC1394_CAPTURE_FLAGS_DEFAULT to be interpreted at
	           runtime rather than at compile-time.
	* SVN 385: Fixed Mac OS to honor flags argument of
	           dc1394_capture_setup().
	* SVN 384: Added missing function dc1394_video_get_iso_channel().
	* SVN 383: Add new function dc1394_read_cycle_timer() to get the value
	           of the bus's cycle timer synchronized with the system time.
		   Implemented for both Mac OS X and Linux.

2007-02-18 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 382: Add a flag argument to the capture setup function to allow
	           finetuning of the automatic channel/bandwidth allocation.
		   Adding an extra "DC1394_CAPTURE_FLAGS_DEFAULT" to every call
		   to dc1394_capture_setup() will yield the same behaviour as
		   before. Also removed old "_dma" examples.
	
2007-02-11 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 381: fix camera detection that failed if probing for optional
	           capabilities returned an error. Thanks to Mark Munte.
	
2007-02-13 Peter Antoniac http://sourceforge.net/users/theseinfeld
	* SVN 380: changed libdc1394.pc to libdc1394-2.pc to avoid pkg-config
	           conflicts when using both versions (v1 - v2) of libdc1394.

2007-02-11 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 379: fixed the previous valgrind fix. Thanks to Robert
	           Olsen, Jon Schewe and Andy Gotz.

2007-02-08 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 378: removed two extra handshakes in format7 functions.
	